# ninetales

./: README.md  main.py  pyproject.toml
examples/: dataclasses_.py
src/ninetales/: convert.py  utils.py
tests/ninetales/: test_convert.py
