[project]
name = "ninetales"
version = "0.1.0"
description = "A Python library to convert between Python data model paradigms"
authors = [
    { name = "Gorka Eraña", email = "gera@baselifescience.com" }
]
dependencies = [
    "attrs>=23.2.0",
    "msgspec>=0.18.6",
    "pydantic>=2.8.2",
]
readme = "README.md"
requires-python = ">= 3.10"

# [project.scripts]
# hello = "ninetales:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython",
    "mypy",
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ninetales"]
